# ComfyUI-LongCatPlugin

./: .gitignore  README.md  README_CN.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
longcat_image/pipelines/: pipeline_longcat_image_edit.py
tests/: test_nodes.py
