[project]
name = "longcatplugin"
description = "ComfyUI nodes wrapping LongCat image generation and editing pipelines with text-to-image and multi-image edit flows using diffusers framework. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch>=2.1.0", "transformers>=4.41.0", "diffusers>=0.30.0", "accelerate>=0.27.0", "pillow>=10.0.0", "numpy>=1.24.0", "openai>=1.12.0", "pytest>=7.4.0"]

[project.urls]
Repository = "https://github.com/ARM64-EC/ComfyUI-LongCatPlugin"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ARM64-EC/ComfyUI-LongCatPlugin/wiki"
"Bug Tracker" = "https://github.com/ARM64-EC/ComfyUI-LongCatPlugin/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LongCatPlugin"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

